--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==23.2.1
 aiohttp==3.9.3
 aiosignal==1.3.1
+annotated-types==0.6.0
 astroid==3.1.0
 asyncio==3.4.3
 attrs==23.2.0
@@ -14,6 +15,8 @@ multidict==6.0.5
 mypy==1.9.0
 mypy-extensions==1.0.0
 platformdirs==4.2.0
+pydantic==2.7.0
+pydantic_core==2.18.1
 pylint==3.1.0
 tomlkit==0.12.4
 typing_extensions==4.11.0
