--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,18 @@ aiofiles==23.2.1
 aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
+anyio==4.3.0
 astroid==3.1.0
 asyncio==3.4.3
 attrs==23.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 dill==0.3.8
+fastapi==0.110.2
 frozenlist==1.4.1
+h11==0.14.0
 idna==3.6
 isort==5.13.2
 mccabe==0.7.0
@@ -18,6 +24,11 @@ platformdirs==4.2.0
 pydantic==2.7.0
 pydantic_core==2.18.1
 pylint==3.1.0
+requests==2.31.0
+sniffio==1.3.1
+starlette==0.37.2
 tomlkit==0.12.4
 typing_extensions==4.11.0
+urllib3==2.2.1
+uvicorn==0.29.0
 yarl==1.9.4
